--- a/.cat/Styles/Style.xaml
+++ b/.cat/Styles/Style.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:styles="clr-namespace:CAT.Styles">
+                    xmlns:styles="clr-namespace:CAT.Views.Windows.Styles">
 
     <Style x:Key="IconButtonsStyle" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Transparent" />
@@ -173,11 +173,12 @@
     </Style>
 
     <Style TargetType="{x:Type styles:CornerButton}">
-        <Setter Property="CornerRadius" Value="3"/>
+        <Setter Property="CornerRadius" Value="3" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type styles:CornerButton}">
                     <Border x:Name="border"
+                            Opacity="0.6"
                             Background="Transparent"
                             BorderThickness="1"
                             Padding="5"
@@ -193,8 +194,7 @@
                     </Border>
 
                     <ControlTemplate.Triggers>
-
-                        <Trigger Property="IsSelected" Value="False">
+                        <Trigger Property="IsEnabled" Value="False">
                             <Setter TargetName="border" Property="BorderBrush" Value="Gray" />
                             <Setter TargetName="borderTextBlock" Property="Foreground" Value="Black" />
                         </Trigger>
@@ -202,20 +202,19 @@
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsMouseOver" Value="True" />
-                                <Condition Property="IsSelected" Value="True" />
+                                <Condition Property="IsEnabled" Value="True" />
                             </MultiTrigger.Conditions>
 
-                            <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ThemeColor}" />
-                            <Setter TargetName="border" Property="Background" Value="#ADD8E6" />
-                            <Setter TargetName="borderTextBlock" Property="Foreground"
-                                    Value="{DynamicResource ThemeColor}" />
+                            <Setter TargetName="border" Property="Opacity" Value="0.8" />
                         </MultiTrigger>
 
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsMouseOver" Value="True" />
-                                <Condition Property="IsSelected" Value="False" />
+                                <Condition Property="IsPressed" Value="True" />
                             </MultiTrigger.Conditions>
+
+                            <Setter TargetName="border" Property="Opacity" Value="1" />
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -262,23 +261,26 @@
     </Style>
 
     <Style TargetType="{x:Type styles:CornerTextBox}">
+        <Setter Property="CornerRadius" Value="5" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type styles:CornerTextBox}">
                     <Border Background="Transparent"
                             BorderThickness="2"
+                            Opacity="0.6"
+                            x:Name="Border"
                             BorderBrush="{DynamicResource ThemeColor}"
                             CornerRadius="{TemplateBinding CornerRadius}">
                         <Grid>
                             <TextBox
                                 Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
                                 Padding="5,0,0,0"
-                                BorderBrush="Transparent"
+                                BorderThickness="0"
                                 Background="Transparent"
                                 Foreground="{DynamicResource ThemeColor}"
                                 FontSize="18"
-                                FontFamily="Microsoft YaHei"
                                 HorizontalContentAlignment="Left"
+                                VerticalAlignment="Center"
                                 VerticalContentAlignment="Center" />
 
                             <TextBlock x:Name="borderTextBlock"
@@ -287,7 +289,6 @@
                                        Foreground="Black"
                                        Text="{TemplateBinding Postscript}"
                                        IsHitTestVisible="False"
-                                       FontFamily="Microsoft YaHei"
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Center" />
                         </Grid>
@@ -296,10 +297,7 @@
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="borderTextBlock" Property="Foreground"
                                     Value="{DynamicResource ThemeColor}" />
-                        </Trigger>
-                        <Trigger Property="IsFocused" Value="True">
-                            <Setter TargetName="borderTextBlock" Property="Foreground"
-                                    Value="{DynamicResource ThemeColor}" />
+                            <Setter TargetName="Border" Property="Opacity" Value="1" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -358,8 +356,8 @@
                                         CornerRadius="6,6,0,0"
                                         Width="{TemplateBinding Width}"
                                         BorderThickness="1"
-                                        BorderBrush="LightGray">
-                                    <ScrollViewer Margin="0" CanContentScroll="True">
+                                        BorderBrush="{DynamicResource WhiteColorLight}">
+                                    <ScrollViewer Margin="0" CanContentScroll="True" MaxHeight="180">
                                         <ItemsPresenter />
                                     </ScrollViewer>
                                 </Border>
@@ -368,13 +366,24 @@
                     </Border>
 
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver" Value="True" />
+                                <Condition Property="IsEnabled" Value="True" />
+                            </MultiTrigger.Conditions>
+
                             <Setter TargetName="Path" Property="Stroke" Value="{DynamicResource ThemeColor}" />
                             <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ThemeColor}" />
-                        </Trigger>
-                        <Trigger Property="IsEnabled" Value="True">
+                        </MultiTrigger>
+
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="HasSelection" Value="True" />
+                                <Condition Property="IsEnabled" Value="True" />
+                            </MultiTrigger.Conditions>
+
                             <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ThemeColor}" />
-                        </Trigger>
+                        </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
@@ -393,6 +402,7 @@
 
                                     <TextBlock Text="{TemplateBinding Content}"
                                                HorizontalAlignment="Center"
+                                               Padding="4,0,4,0"
                                                Foreground="Black" />
                                 </Border>
                                 <ControlTemplate.Triggers>
@@ -424,18 +434,32 @@
                         <Border BorderThickness="0"
                                 CornerRadius="6"
                                 x:Name="border">
-                            <TextBox
-                                Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
-                                Padding="2"
-                                BorderThickness="0"
-                                Background="Transparent"
-                                FontWeight="Bold"
-                                IsEnabled="False"
-                                Foreground="Black"
-                                x:Name="text"
-                                FontSize="17"
-                                HorizontalContentAlignment="Center"
-                                VerticalContentAlignment="Center" />
+                            <StackPanel Orientation="Horizontal">
+                                <TextBox
+                                    Text="{Binding Tag, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
+                                    Padding="2"
+                                    BorderThickness="0"
+                                    Background="Transparent"
+                                    FontWeight="Bold"
+                                    IsEnabled="False"
+                                    Foreground="Black"
+                                    FontSize="12"
+                                    HorizontalContentAlignment="Center"
+                                    VerticalContentAlignment="Center" />
+
+                                <TextBox
+                                    Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
+                                    Padding="2"
+                                    BorderThickness="0"
+                                    Background="Transparent"
+                                    FontWeight="Bold"
+                                    IsEnabled="False"
+                                    Foreground="Black"
+                                    x:Name="text"
+                                    FontSize="17"
+                                    HorizontalContentAlignment="Center"
+                                    VerticalContentAlignment="Center" />
+                            </StackPanel>
                         </Border>
                     </StackPanel>
                     <ControlTemplate.Triggers>
@@ -779,44 +803,44 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style TargetType="ScrollBar" BasedOn="{StaticResource ForScrollbar}" />
     <Style TargetType="ScrollViewer" BasedOn="{StaticResource ForScrollviewer}" />
-    
-            <Style x:Key="DynamicBorderRadioButtonStyle" TargetType="RadioButton">
-            <Setter Property="Background" Value="{DynamicResource ThemeColor}"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="RadioButton">
-                        <StackPanel Orientation="Horizontal">
-                            <Border
-                                x:Name="border"
-                                Width="40"
-                                Height="40"
-                                HorizontalAlignment="Left"
-                                CornerRadius="3"
-                                Margin="0"
-                                Background="{TemplateBinding Background}"
-                                BorderBrush="{DynamicResource WhiteColorLight}"
-                                BorderThickness="2"/>
-                            <TextBlock
-                                Margin="5,0,0,0"
-                                VerticalAlignment="Center"
-                                x:Name="TextBlock"
-                                Text="{TemplateBinding Content}"
-                                FontSize="15"/>
-                            </StackPanel>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsChecked" Value="True">
-                                <Setter TargetName="TextBlock" Property="Foreground" Value="{DynamicResource ThemeColor}"/>
-                                <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ThemeColor}"/>
-                            </Trigger>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="TextBlock" Property="Foreground" Value="{DynamicResource ThemeColor}"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+
+    <Style x:Key="DynamicBorderRadioButtonStyle" TargetType="RadioButton">
+        <Setter Property="Background" Value="{DynamicResource ThemeColor}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RadioButton">
+                    <StackPanel Orientation="Horizontal">
+                        <Border
+                            x:Name="border"
+                            Width="40"
+                            Height="40"
+                            HorizontalAlignment="Left"
+                            CornerRadius="3"
+                            Margin="0"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{DynamicResource WhiteColorLight}"
+                            BorderThickness="2" />
+                        <TextBlock
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Center"
+                            x:Name="TextBlock"
+                            Text="{TemplateBinding Content}"
+                            FontSize="15" />
+                    </StackPanel>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="TextBlock" Property="Foreground" Value="{DynamicResource ThemeColor}" />
+                            <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ThemeColor}" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="TextBlock" Property="Foreground" Value="{DynamicResource ThemeColor}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
